# guile

./: .cvsignore  .dir-locals.el  .gitignore  .gnuploadrc  .x-sc_GPL_version  .x-sc_cast_of_alloca_return_value  .x-sc_cast_of_argument_to_free  .x-sc_error_message_period  .x-sc_error_message_uppercase  .x-sc_error_message_warn_fatal  .x-sc_m4_quote_check  .x-sc_makefile_check  .x-sc_obsolete_symbols  .x-sc_program_name  .x-sc_prohibit_atoi_atof  .x-sc_prohibit_doubled_word  .x-sc_prohibit_have_config_h  .x-sc_prohibit_magic_number_exit  .x-sc_prohibit_path_max_allocation  .x-sc_prohibit_strcmp  ANNOUNCE  ANON-CVS  AUTHORS  BUGS  ChangeLog  ChangeLog-2008  FAQ  GUILE-VERSION  HACKING  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  NOTES  README  README.CVS  README.guile-vm  RELEASE  SNAPSHOTS  (+30 more)
am/: ChangeLog  ChangeLog-2008  Makefile.am  README  guilec  maintainer-dirs  pre-inst-guile  snarf
benchmark-suite/: ChangeLog  ChangeLog-2008  Makefile.am  README  guile-benchmark  lib.scm
benchmark-suite/benchmark-suite/: lib.scm
benchmark-suite/benchmarks/: 0-reference.bm  arithmetic.bm  bytevectors.bm  chars.bm  continuations.bm  hash.bm  if.bm  logand.bm  ports.bm  r6rs-arithmetic.bm  read.bm  srfi-1.bm  srfi-13.bm  strings.bm  structs.bm  subr.bm  uniform-vector-read.bm  vectors.bm  vlists.bm  write.bm
benchmark-suite/results/: neil-arudy
doc/: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  ChangeLog-guile-doc  Makefile.am  Makefile.in  NEWS  README  THANKS  api.txt  appendices.texi  data-rep.texi  deprecated.texi  env.texi  expect.texi  extend.texi  format.texi  gh.texi  goops-tutorial.texi  goops.mail  goops.texi  groupings.alist  guile-api.alist  guile-tut.texi  guile-vm.texi  guile.1  guile.texi  hacks.el  indices.texi  intro.texi  mbapi.texi  mltext.texi  new-docstrings.texi  oldfmt.c  posix.texi  preface.texi  recipe-guidelines.txt  release.org  (+27 more)
doc/example-smob/: ChangeLog  ChangeLog-2008  (+5 more)
emacs/: .cvsignore  ChangeLog  Makefile.am  README  gds-client.scm  gds-faq.txt  gds-problems.txt  gds-scheme.el  gds-server.el  gds-server.scm  gds-test.el  gds-test.sh  gds-tutorial.txt  gds.el  gud-guile.el  guile-c.el  guile-emacs.scm  guile-scheme.el  guile.el  multistring.el  patch.el  ppexpand.el  update-changelog.el
examples/: ChangeLog  ChangeLog-2008  Makefile.am  README  check.test
gc-benchmarks/: Makefile.am  gc-profile.scm  gcbench.scm  guile-test.scm  loop.scm  run-benchmark.scm  string.scm  twobit-compat.scm
guile-config/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  guile-config.in  guile.m4  qthreads.m4
guile-readline/: .cvsignore  ChangeLog  LIBGUILEREADLINE-VERSION  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.in  libtool  readline-activator.scm  readline.c  readline.h  readline.scm
ice-9/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  and-let-star-compat.scm  and-let-star.scm  arrays.scm  boot-9.scm  buffered-input.scm  calling.scm  channel.scm  common-list.scm  compile-psyntax.scm  configure  configure.in  debug.scm  debugger.scm  deprecated.scm  doc.scm  documentation.scm  emacs.scm  expect.scm  format.scm  ftw.scm  gap-buffer.scm  gds-client.scm  gds-server.scm  getopt-gnu-style.scm  getopt-long.scm  gtcl.scm  gwish.scm  hcons.scm  history.scm  i18n.scm  lineio.scm  list.scm  ls.scm  mapping.scm  match.scm  (+36 more)
lang/: Makefile.am
libguile/: .cvsignore  .gitignore  ChangeLog  ChangeLog-1996-1999  ChangeLog-2000  ChangeLog-gh  ChangeLog-scm  ChangeLog-srfi  ChangeLog-threads  DYNAMIC-LINKING  Makefile.am  Makefile.in  __scm.h  _scm.h  acconfig.h  aclocal.m4  alist.c  alist.h  alloca.c  append.c  append.h  appinit.c  arbiters.c  arbiters.h  array-handle.c  array-handle.h  array-map.c  array-map.h  arrays.c  arrays.h  async.c  async.h  backtrace.c  backtrace.h  bdw-gc.h  bitvectors.c  bitvectors.h  boehm-gc.h  boolean.c  boolean.h  (+356 more)
libguile-ltdl/: ChangeLog  Makefile.am  guile-ltdl.c  guile-ltdl.h  raw-ltdl.c  raw-ltdl.h
meta/: ChangeLog-2008  Makefile.am  build-env.in  gdb-uninstalled-guile.in  guild.in  guile-1.8.pc.in  guile-2.0-uninstalled.pc.in  guile-2.0.pc.in  guile-config  guile-config.in  guile-tools  guile-tools.in  guile.in  guile.m4  uninstalled-env.in
module/: .cvsignore  Makefile.am  rnrs.scm  statprof.scm  texinfo.scm
qt/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  b.h  config  configure  configure.in  libqthreads.def  qt.c  qt.h.in  stp.h
scripts/: ChangeLog  Makefile.am  PROGRAM  README  annotate-api-groupings  api-diff  autofrisk  compile  disassemble  display-commentary  doc-snarf  frisk  generate-autoload  lint  punify  read-rfc822  read-scheme-source  read-text-outline  scan-api  snarf-check-and-output-texi  snarf-guile-m4-docs  summarize-guile-TODO  use2dot
src/: .cvsignore  Makefile.am  envs.c  envs.h  frames.c  frames.h  guile-compile.in  guile-disasm.in  guile-vm.c  guilec.in  instructions.c  instructions.h  objcodes.c  objcodes.h  programs.c  programs.h  test.scm  vm-snarf.h  vm.c  vm.h  vm_engine.c  vm_engine.h  vm_expand.h  vm_loader.c  vm_number.c  vm_scheme.c  vm_system.c
srfi/: .cvsignore  ChangeLog  Makefile.am  README  srfi-1.c  srfi-1.h  srfi-1.scm  srfi-10.scm  srfi-11.scm  srfi-13.c  srfi-13.h  srfi-13.scm  srfi-14.c  srfi-14.h  srfi-14.scm  srfi-16.scm  srfi-17.scm  srfi-18.scm  srfi-19.scm  srfi-2.scm  srfi-26.scm  srfi-31.scm  srfi-34.scm  srfi-35.scm  srfi-37.scm  srfi-39.scm  srfi-4.c  srfi-4.h  srfi-4.scm  srfi-6.scm  srfi-60.c  srfi-60.h  srfi-60.scm  srfi-69.scm  srfi-8.scm  srfi-9.scm
test/: .cvsignore  Makefile.am  control.scm  procedure.scm  queens.scm  test.scm
test-suite/: .cvsignore  ChangeLog  ChangeLog-2008  Makefile.am  README  guile-test  lib.scm  paths.scm
testsuite/: Makefile.am  run-vm-tests.scm  t-basic-contructs.scm  t-catch.scm  t-closure.scm  t-closure2.scm  t-closure3.scm  t-do-loop.scm  t-literal-integers.scm  t-macros.scm  t-map.scm  t-match.scm  t-or.scm  t-proc-with-setter.scm  t-quasiquote.scm  t-records.scm  t-values.scm
vm/: Makefile.am  bytecomp.scm  compile.scm  shell.scm  types.scm  utils.scm
(+1340 files in other folders)
