SUBDIRS = src doc testsuite
DIST_SUBDIRS = src module doc testsuite

# FIXME: The `module' directory is removed from `SUBDIRS' until it can
# actually be built.

EXTRA_DIST = acconfig.h

MAINTAINERCLEANFILES = COPYING INSTALL config.guess config.sub ltconfig \
	ltmain.sh Makefile.in aclocal.m4 config.h.in stamp-h.in \
	configure missing mkinstalldirs install-sh texinfo.tex
